fixed small bugs-- like flickering content and things

--- a/client/css/account/sections/_account.settings.scss
+++ b/client/css/account/sections/_account.settings.scss
@@ -23,6 +23,7 @@ div.settings{
 
 
 	button.delete-account{
+		cursor: pointer;
 		font-family: $header-font;
 		padding: 5px 15px;
 		border-radius: 5px;
@@ -55,6 +56,7 @@ div.settings{
 		}
 
 		button.delete-account-final{
+			cursor: pointer;
 			font-size: .7em;
 			font-family: $header-font;
 			padding: 5px 15px;
